--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,22 @@
-{"short_name":"Geometricamente","name":"Geometricamente","icons":[{"src":"/assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079","type":"image/png","sizes":"3000x3000","purpose":"any maskable"},{"src":"/assets/img/icons/maths.png?h=aad64379b24a0efb5f63f4c824e6a079","type":"image/png","sizes":"3000x3000","purpose":"any maskable"}],"start_url":"index.html","background_color":"rgb(255,255,255)","theme_color":"#6610f2","display":"standalone"}
+{
+    "short_name": "Geometricamente",
+    "name": "Geometricamente",
+    "icons": [
+        {
+            "src": "/assets/img/icons/android-chrome-512x512.png",
+            "type": "image/png",
+            "sizes": "3000x3000",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/assets/img/icons/android-chrome-512x512.png",
+            "type": "image/png",
+            "sizes": "3000x3000",
+            "purpose": "any maskable"
+        }
+    ],
+    "start_url": "index.html",
+    "background_color": "rgb(255,255,255)",
+    "theme_color": "#6610f2",
+    "display": "standalone"
+}
